# Greedi-Fi

./: .gitignore  Component1-README.md  Components.md  README.md  docker-compose.yml
backend/api/: Dockerfile  main.py  requirements.txt
backend/cpp/: CMakeLists.txt  Dockerfile  MarketDataFeed.cpp  MarketDataFeed.h  SampleStrategies.h  StrategyEngine.cpp  StrategyEngine.h  main_market_data.cpp
component4/: README.md  docker-compose.yml
component4/backend/api/: main.py  requirements.txt
component4/backend/cpp/: CMakeLists.txt  Dockerfile  main.cpp
component4/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
component4/frontend/src/: App.js
component4/frontend/src/components/: BacktestResults.js  BacktestRunner.js  Dashboard.js  StrategyCreator.js  StrategyLibrary.js
frontend/: Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/: MarketDataViewer.js  OrderBook.js  RecentTrades.js
